[project]
name = "Sub-Server"
version = "0.1.0"
description = "Sub-Server for the NBA Check-In Tracker"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "nba-api>=1.5.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "uvicorn[standard]>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
